<resources>
    <string name="app_name">Laborers Freelance</string>
    <string name="action_settings">Settings</string>
    <string name="slogan">FreeLance</string>
    <string name="login">Login</string>
    <string name="sihnup">New Account</string>
    <string name="hint_user_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_address">Address</string>
    <string name="hint_confpass">Confirm Password</string>
    <string name="btn_link_to_login">Have Account? login</string>
    <string name="resume">About You</string>
    <string name="check_network">Check Internet</string>
    <string name="error_user">Email or password not right</string>
    <string name="speciality">Main Job</string>
    <string name="continue_register">Continue Register</string>
    <string name="hint_phone2">Phone2</string>
    <string name="wait_loading">Loading</string>
    <string name="fav">Loading...</string>
    <string name="about_us">حرفيين فريلانس. منصة مهنية إجتماعية ذكية توفر فرص عمل في العديد من المجالات المهنية (السباكة، الكهرباء، الطلاء، النجارة، البناء، الهندسة الميكانيكية وغيرها) عبر ربط المهنيين بأصحاب العمل بكل سهولة لتوفير الوقت والجهد للطرفين.</string>
    <string name="home">Home</string>
    <string name="sending_requests">sent Request</string>
    <string name="my_favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="aboutus">About us</string>
    <string name="update">update Account</string>
    <string name="hint_comment">details</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="favorite">Add Favorite</string>
    <string name="order">Order</string>
    <string name="call">Acll</string>
    <string name="reload">Reload</string>
    <string name="noconnection">No internet Connection!</string>
    <string name="nofav">No Favorite Added!</string>
    <string name="norqst">No Request Sent!</string>
    <string name="rate">Rate</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="comming_requests">Received Request</string>
    <string-array name="country_array">
        <item>cairo</item>
        <item>giza</item>
        <item>menofia</item>
        <item>el gharbia</item>
        <item>alex</item>
        <item>aswan</item>
        <item>elbhira</item>
        <item>luxur</item>
        <item>sharm elshikhe</item>
    </string-array>
    <string-array name="city_array">
        <item>cairo</item>
        <item>giza</item>
        <item>menofia</item>
        <item>el gharbia</item>
        <item>alex</item>
        <item>aswan</item>
        <item>elbhira</item>
        <item>luxur</item>
        <item>sharm elshikhe</item>
    </string-array>
    <string-array name="specialty_array">
        <item>cairo</item>
        <item>giza</item>
        <item>menofia</item>
        <item>el gharbia</item>
        <item>alex</item>
        <item>aswan</item>
        <item>elbhira</item>
        <item>luxur</item>
        <item>sharm elshikhe</item>
    </string-array>
    <string-array name="sub_specialty_array">
        <item>cairo</item>
        <item>giza</item>
        <item>menofia</item>
        <item>el gharbia</item>
        <item>alex</item>
        <item>aswan</item>
        <item>elbhira</item>
        <item>luxur</item>
        <item>sharm elshikhe</item>
    </string-array>
    <string-array name="male_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_choose_location">Map</string>
    <string name="update_location">Update Place</string>


    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="drawer_img">drawerImage</string>
    <string name="slpach_icon">icon splash image</string>
    <string name="nav_img">navigation drawer menu image</string>
    <string name="logo">logo</string>
    <string name="user">user for review</string>
    <string name="arrow">arrow image</string>
    <string name="sub_specialty">subSpecialty</string>
    <string name="place">icon place</string>
    <string name="gps">gps icon</string>
    <string name="job">worker job</string>
    <string name="end_date">end date icon</string>
    <string name="status">status icon</string>
    <string name="floating">floating action button</string>
    <string name="rate_worker">Rate Worker</string>
    <string name="work_rate">Work Rate</string>
    <string name="price">Price</string>
    <string name="apperance">Appearence</string>
    <string name="time">Time</string>
    <string name="clean">Clean</string>
    <string name="confirm_your_location">Confirm Your location</string>
    <string name="laborers">Laborers</string>
    <string name="users">Users</string>
    <string name="experience_years">Experiance Years</string>
    <string name="jobs">Job</string>
    <string name="learning">Learning</string>
    <string name="place_work">Place Work</string>
    <string name="skills">Skills</string>
    <string name="experiences">Experiences</string>
    <string name="rates">Rates</string>
    <string name="gps_open">GPS is Enabled in your device</string>
    <string name="no_permission">No Permissions Granted</string>
    <string name="notes_error">Notes is not right</string>
    <string name="gender_error">Choose Your Gender</string>
    <string name="specialty_error">Choose Your Specialty</string>
    <string name="specialt_error">Choose Your Specialty</string>
    <string name="valid_email">enter valid email address</string>
    <string name="email_error">Email is not right</string>
    <string name="pass_error">Password is not right</string>
    <string name="valid_pass">between 7 and 14 alphanumeric characters</string>
    <string name="gps_disable">GPS is disabled in your device. Would you Like to enable it?</string>
    <string name="gps_setting">GoTo Settings Page To Enable GPS</string>
    <string name="cancel">Cancel</string>
    <string name="message">message</string>
    <string name="name_error">User Name is not right</string>
    <string name="address_error">Address is not right</string>
    <string name="error_chars">at least 3 characters</string>
    <string name="phone_valid">enter valid Phone Number</string>
    <string name="phone_erro">Phone Number is not right</string>
    <string name="contry_error">Choose Your Country</string>
    <string name="city_error">Choose Your City</string>
    <string name="user_error">This User Already has Account!</string>
    <string name="pass_not_match">password not match</string>
    <string name="cant_rate">Can\'t Rate now!</string>
    <string name="database_created">database CREATED</string>
    <string name="database_error">Sorry there is Error in create your database \n</string>
    <string name="database_upgrade_error">Sorry there is Error in upgrade your database \n</string>
    <string name="data_not_complete">data not complete</string>
    <string name="order_success">successful Order</string>
    <string name="error">Error!!</string>
    <string name="success_rate">Successful Rate</string>
    <string name="filter">Apply Filter</string>
    <string name="not_available">not Available</string>
    <string name="available">Available</string>
    <string name="detail">التفاصيل</string>
    <string name="rate_first">Must Rate Worker Before Order</string>
    <string name="done">done</string>
    <string name="cant_order">Can\'t Order</string>
    <string name="fill_details">Fill Details</string>
    <string name="ordr">order</string>
    <string name="rate_one">rate_one</string>
    <string name="his_self">his_self</string>
    <string name="not_avalb">not_avilable</string>
    <string name="contact_us">Connect with us</string>
    <string name="version">Version 1.0</string>
    <string name="mail">mahmoud.sadek.96@gmail.com</string>
    <string name="web">http://medyo.github.io/</string>
    <string name="packg">com.sadek.apps.graduationproject</string>
    <string name="insta">3shank_foryou</string>
    <string name="main_job">Main Job</string>
    <string name="job_">job</string>
    <string name="gender">Gender</string>
    <string name="action">Action</string>
    <string name="tap">Taped Location</string>
    <string name="valid_notes">enter valid Notes</string>
    <string name="city">المدينة</string>
    <string name="government">المحافظة</string>

</resources>
